configure zgc (#32)
* configure zgc

* install libstdc++ & try java 14 & upgrade alpine