@@ -1,11 +1,11 @@
-FROM alpine:3.12.4 AS compile-installer
+FROM alpine:3.13.5 AS compile-installer
 ADD https://github.com/tony84727/minecraft-mod-installer/archive/refs/tags/v0.1.1.zip installer.zip
 RUN apk add --update unzip cargo openssl-dev
 RUN unzip installer.zip
 WORKDIR /minecraft-mod-installer-0.1.1
 RUN --mount=type=cache,target=/root/.cargo/registry --mount=type=cache,target=/root/.cargo/git --mount=type=cache,target=target cargo build --release && cp target/release/minecraft-mod-installer /tmp/minecraft-mod-installer
 
-FROM alpine:3.12.4 AS download
+FROM alpine:3.13.5 AS download
 
 RUN apk add --update openjdk11 unzip bash libgcc
 WORKDIR /tmp
@@ -20,8 +20,8 @@ RUN chmod +x ./minecraft-mod-installer && ./minecraft-mod-installer
 ADD https://files.minecraftforge.net/maven/net/minecraftforge/forge/1.16.5-36.1.2/forge-1.16.5-36.1.2-installer.jar forge-installer.jar
 RUN java -jar forge-installer.jar --installServer
 
-FROM alpine:3.12.4
-RUN apk add --update --no-cache openjdk11 emacs zip unzip bash
+FROM adoptopenjdk/openjdk14:alpine
+RUN apk add --update --no-cache emacs zip unzip bash libstdc++
 COPY --from=download /tmp/server-files /var/server
 WORKDIR /var/server
 ADD quark-common.toml config/quark-common.toml
@@ -30,26 +30,10 @@ ADD server.properties server.properties
 VOLUME [ "/var/server/world" ]
 VOLUME [ "/var/server/backups" ]
 ENV JVM_OPTS="-server \
--XX:+UseG1GC \
--XX:+ParallelRefProcEnabled \
--XX:MaxGCPauseMillis=200 \
 -XX:+UnlockExperimentalVMOptions \
--XX:+DisableExplicitGC \
--XX:+AlwaysPreTouch \
--XX:G1NewSizePercent=30 \
--XX:G1MaxNewSizePercent=40 \
--XX:G1HeapRegionSize=8M \
--XX:G1ReservePercent=20 \
--XX:G1HeapWastePercent=5 \
--XX:G1MixedGCCountTarget=4 \
--XX:InitiatingHeapOccupancyPercent=15 \
--XX:G1MixedGCLiveThresholdPercent=90 \
--XX:G1RSetUpdatingPauseTimePercent=5 \
+-XX:+UseZGC \
 -XX:SurvivorRatio=32 \
--XX:+PerfDisableSharedMem \
--XX:MaxTenuringThreshold=1 \
--Dusing.aikars.flags=https://mcflags.emc.gs \
--Daikars.new.flags=true \
+-XX:MaxGCPauseMillis=50 \
 -Dfml.readTimeout=90 \
 -Dfml.queryResult=confirm"
 ENV MEMORY="12G"
